# wsl-bridge

./: Cargo.toml  README.md
src/: config.rs  detector.rs  main.rs  windows.rs
